test/spec_vectors/simd_bit_shift/fail/module_36.wat
(module (func $i32x4.shr_s-last-arg-empty (result v128) (i32x4.shr_s (v128.const i32x4 0 0 0 0))))